SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements: 

 - A new preference for choosing Locale is available in Global Preferences -> General tab.  This allows you to
   set your preferred locale, and if an optional translation is installed that corresponds with the preferred
   locale, then restart and the changes take effect.(No longer necessary to hand edit the start script)

 - Copy as "SQL WHERE" / "UPDATE-SET" / "INSERT-VALUES" statement function in tables
   Tables offer right mouse menu to copy WHERE, UPDATE-SET or INSERT-VALUES clauses of selected data to clip board.
   Works like the exisiting "Copy as SQL IN statment" function.

 - New Plugin: SQLReplace by Dieter Engelhardt
   This plugin replaces a set of variables before a statement is executed.
   The variables to replace can be defined at the Plugin's Global Preferences tab.  

 - Added a preference option to allow the selection of items in lists to change while activating
   the popup menu on a single right-mouse button click.  For example, without this, you need to 
   select an object in the tree with a left mouse button click, then press the right mouse button 
   to activate the popup menu.(See Global Preferences -> General -> Select On Right Mouse Click)

Data Import Plugin: It now warns the user when importing data into an existing table, that it's current data 
                    will be truncated first.

DBCopy Plugin: 
 - Added support for mapping the DISTINCT source column type for copying data from PostgreSQL

DB2 Plugin: Lars Heller provided a patch to add support for XML column types in SQuirreL via the 
            DB2 Plugin (tested against DB2 v9.5 LUW)

Oracle Plugin:
 - Added validity (VALID|INVALID) field to trigger details tab for triggers.
 - Allow the user to configure whether or not to show the syntax error offset in 