@@ -6,6 +6,8 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements: 
 
+ - Aliases can be displayed as list or as tree.
+
  - A new preference for choosing Locale is available in Global Preferences -> General tab.  This allows you to
    set your preferred locale, and if an optional translation is installed that corresponds with the preferred
    locale, then restart and the changes take effect.(No longer necessary to hand edit the start script)
